<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#fff">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ui.chat.MainActivity">

        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="16dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="80dp"
            android:layout_above="@+id/txtCrimeCategory"
            android:layout_height="80dp"
            android:id="@+id/botLogo"
            />

        <TextView
           android:layout_width="250dp"
           android:layout_height="wrap_content"
           android:text="@string/crimeCategoryTextChat"
           android:id="@+id/txtCrimeCategory"
           android:textSize="24sp"
           android:layout_marginBottom="32dp"
           android:layout_above="@id/chipGroupCrime"/>


        <com.google.android.material.chip.ChipGroup
            android:layout_marginBottom="16dp"
            android:layout_above="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipGroupCrime"
            android:background="#fff"
            app:singleLine="false"
            app:singleSelection="true"
            android:layout_alignParentRight="true"
            app:chipBackgroundColor="#fff"
            app:chipStrokeWidth="1dp"
            app:chipStrokeColor="@color/colorAccent"

            >
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipRed"
                android:text="@string/theftCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:textAppearance="@style/chipTextAppearance"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipGreen"
                android:text="@string/murderCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:textAppearance="@style/chipTextAppearance"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipBlue"
                android:text="@string/molestationCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:textAppearance="@style/chipTextAppearance"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipYellow"
                android:text="@string/domestic_violenceCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:textAppearance="@style/chipTextAppearance"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipPink"
                android:text="@string/cyber_crimeCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/chipTextAppearance"
                />


            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chip1"
                android:text="@string/hit_and_runCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/chipTextAppearance"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chip2"
                android:text="@string/acid_attackCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/chipTextAppearance"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chip3"
                android:text="@string/sexual_harassmentCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/chipTextAppearance"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chip4"
                android:text="@string/kidnappCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/chipTextAppearance"
                />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chip5"
                android:text="@string/rapeCategory"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/chipTextAppearance"
                />
            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipGold"
                android:text="@string/otherGenderChatBtn"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                app:chipBackgroundColor="#fff"
                app:chipStrokeWidth="1dp"
                android:textColor="@color/colorPrimary"
                app:chipStrokeColor="@color/colorPrimary"
                android:layout_marginBottom="32dp"
                android:textAppearance="@style/chipTextAppearance"
                />


        </com.google.android.material.chip.ChipGroup>


        <com.tomer.fadingtextview.FadingTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:texts="@array/Fade_In"
            app:timeout="500"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            android:textSize="12sp"
            android:textColor="#000"
            android:id="@+id/txtlogo"
            />


        <com.sasank.roundedhorizontalprogress.RoundedHorizontalProgressBar
            android:id="@+id/progress_bar_category"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="false"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            app:backgroundColor="#fff"
            app:progressColor="@color/colorAccent"
            android:layout_alignParentTop="true"/>

        <com.eyalbira.loadingdots.LoadingDots
            android:id="@+id/dots"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dp"
            app:LoadingDots_dots_color="@color/colorPrimary"
            app:LoadingDots_auto_play="true"
            app:LoadingDots_dots_count="4"
            app:LoadingDots_loop_duration="800"
            app:LoadingDots_loop_start_delay="100"
            app:LoadingDots_jump_duration="200"
            app:LoadingDots_jump_height="4dp"
            app:LoadingDots_dots_size="2dp"
            android:layout_alignParentBottom="true"
            />



    </RelativeLayout>
</ScrollView>