<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="#fff"
        tools:context=".ui.chat.MainActivity">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mapLocationChat"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            map:cameraZoom="1"
            tools:context=".features.maps.MapsComplaint" />


        <ImageView
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="16dp"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="80dp"
            android:layout_above="@+id/txtName"
            android:layout_height="80dp"
            android:layout_below="@+id/mapLocationChat"
            android:id="@+id/botLogo"
            />

        <TextView
            android:layout_above="@+id/edtLocation"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/landmarkTextChat"
            android:textSize="24sp"
            android:padding="16dp"
            android:background="@drawable/bot_bg_bubble"
            android:id="@+id/txtName"/>

        <EditText
            android:layout_width="240dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:hint="@string/enter_locationDateLocEdt"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:id="@+id/edtLocation"
            android:layout_above="@+id/btnLocation"
            />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLocation"
            android:text="@string/sendBtnChat"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="32dp"
            android:layout_alignParentBottom="true"
            app:chipBackgroundColor="#fff"
            app:chipStrokeWidth="1dp"
            android:textColor="@color/colorPrimary"
            app:chipStrokeColor="@color/colorPrimary"
            android:textAppearance="@style/chipTextAppearance"/>

        <com.sasank.roundedhorizontalprogress.RoundedHorizontalProgressBar
            android:id="@+id/progress_bar_location"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="false"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            app:backgroundColor="#fff"
            app:progressColor="@color/colorAccent"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>
</ScrollView>